# rhema

./: .friehub_brain.json  .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json
.claude/: CLAUDE.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: buildin.yml  deploy-web.yml  landing-deploy.yml
Documentation/: whisper.md
data/: bible_gateway.py  build-bible-db.ts  compute-embeddings.ts  download-biblegateway.py  download-model-robust.py  download-model.ts  download-sources.ts  download-whisper-model.ts  export-model-direct.py  precompute-embeddings-onnx.py  precompute-embeddings.py  prepare-embeddings.ts
data/lib/: python-env.ts
landing/: .gitignore  README.md  eslint.config.js  index.html  package.json  vite.config.ts
landing/public/: site.webmanifest
landing/src/: App.tsx  index.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  audit_final_report.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/stt/: Cargo.toml
src-tauri/crates/stt/src/: backend.rs  deepgram.rs  error.rs  keyterms.rs  lib.rs  local.rs  rest.rs  types.rs  whisper.rs
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  memstats.rs  state.rs
src/components/: scripture-quick-nav.tsx  settings-dialog.tsx  theme-provider.tsx
src/hooks/: use-prediction.ts  use-remote-control.ts  use-transcription.test.ts  (+1 more)
web/: .gitignore  README.md  mdx-components.tsx  next.config.ts  package.json  source.config.ts  tsconfig.json
(+185 files in other folders)
